# adsmaster

./: .env.example  .gitignore  AI-Ad-Startup-100-Features.docx  CLAUDE.md  CONTINUE_FROM_HERE.md  DEPLOYMENT.md  STATUS.md  aichat.hyml  blueprint.html  critical.md  docker-compose.prod.yml  docker-compose.yml  hooks (1).html  package-lock.json  package.json  phase13-critical-build-plan.docx  turbo.json  ui-claude.suggestion.md
apps/api/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: accounts.py  ad_goals.py  ad_insights.py  admin.py  admin_ai.py  admin_api_monitor.py  admin_emails.py  admin_marketing.py  admin_settings.py  admin_system.py  ai_chat.py  audiences.py  auth.py  automations.py  campaigns.py  click_analytics.py  conversion_import.py  crm_integrations.py  demo.py  domains.py  live_debug.py  meta_auth.py  meta_campaigns.py  ml.py  offline_conversions.py  product_analytics.py  recommendations.py  search_console.py  session_recordings.py  settings.py  studio.py  sync.py  sync_logs.py  tracking.py  user_auth.py  visitors.py  webhooks.py  webhooks_ingest.py
apps/api/app/core/: config.py
apps/api/app/integrations/: rate_limiter.py
apps/api/app/integrations/google_ads/: adapter_factory.py
apps/api/app/services/: alert_service.py  automation_service.py  database.py  email_service.py  ga4_service.py  google_ads_oauth.py  meta_ads_oauth.py  meta_ads_service.py  stripe_service.py  supabase_client.py
apps/api/app/services/ai/: __init__.py  (+5 more)
apps/api/app/workers/: alert_worker.py  reconciliation_worker.py  sync_worker.py  token_refresh_worker.py
(+261 files in other folders)
