[tool.poetry]
name = "adsmaster-api"
version = "0.1.0"
description = "AdsMaster FastAPI Backend"
authors = ["AdsMaster Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
supabase = "^2.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.28.0"
redis = "^5.0.0"
google-ads = "^25.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
